<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="HardcodedText"
    >
    
    <TextView
        android:id="@+id/locationName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:text="Name"
	    android:paddingLeft="3dip" 
        android:layout_alignParentLeft="true"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <TextView
        android:id="@+id/locationAllAges"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
	    android:paddingLeft="3dip" 
        android:layout_alignParentLeft="true"
  		android:textStyle="bold"
        android:layout_below="@id/locationName"
        android:text="21+" />
    
    <TextView
        android:id="@+id/locationAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationAllAges"
        android:layout_alignParentLeft="true"
	    android:paddingLeft="3dip" 
        android:text="location address" />

    <TextView
        android:id="@+id/locationPhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/locationAddress"
        android:layout_alignParentLeft="true"
	    android:paddingLeft="3dip" 
        android:text="location phone" />

	<LinearLayout
	    android:id="@+id/buttonArea"
	    style="?android:attr/buttonBarStyle"
	    android:layout_below="@id/locationPhone"
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:gravity="bottom|right"
	    android:orientation="horizontal" >
	
	    <ImageButton
	        android:contentDescription="@string/callThisLocation"
	        android:id="@+id/callButton"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/ic_action_call"
	        android:onClick="onCallButtonClick" />

    	<ImageButton
	        android:contentDescription="@string/website"
	        android:id="@+id/websiteButton"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/ic_action_web_site"
	        android:onClick="onWebsiteButtonClick" />
	
    	<ImageButton
	        android:contentDescription="@string/mapToThisLocation"
	        android:id="@+id/mapButton"
	        style="?android:attr/buttonBarButtonStyle"
	        android:layout_width="0dp"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:src="@drawable/ic_action_place"
	        android:onClick="onMapButtonClick" />
	
    		</LinearLayout>

    <ListView
        android:id="@+id/gameListView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/buttonArea" />


</RelativeLayout>